<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.login.LoginFragment">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/parent_padding">

        <ImageView
            android:contentDescription="@string/shoe_logo"
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/textUsernameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintParent" />

        <TextView
            android:id="@+id/textLoginLabel"
            style="@style/text_style"
            android:text="@string/login_welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            tools:text="Welcome to Shoe store" />

        <TextView
            android:id="@+id/textUsernameLabel"
            style="@style/text_style"
            android:text="@string/email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLoginLabel"
            tools:text="User Name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUsernameLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_your_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:text="@={loginViewModel.email}"
                android:afterTextChanged="@{(text) -> loginViewModel.onEmailChanged(text)}"
                android:textSize="@dimen/font_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textPassWordLabel"
            style="@style/text_style"
            android:hint="@string/input_your_password"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/textUsernameLabel"
            app:layout_constraintTop_toBottomOf="@id/editUserName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPassWordLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_your_password"
                android:inputType="textPassword"
                android:lines="1"
                android:text="@={loginViewModel.password}"
                android:afterTextChanged="@{ (text) -> loginViewModel.onPasswordChanged(text)}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/button_style"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:backgroundTint="@null"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> loginViewModel.doLogin()}"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>